syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "KBMGrpcService.Grpc.User";

package grpc.user;

message User {
  string id = 1;
  string name = 2;
  string username = 3;
  string email = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateUserRequest {
  string name = 1;
  string username = 2;
  string email = 3;
}

message CreateUserResponse {
  string user_id = 1;
}

message GetUserByIdRequest {
  string id = 1;
}

message GetUserByIdResponse {
  string name = 1;
  string username = 2;
  string email = 3;
  string created_at = 4;
  string updated_at = 5;
}

message QueryUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  string order_by = 3;
  string direction = 4;
  string query_string = 5;
}

message QueryUsersResponse {
  int32 page = 1;
  int32 page_size = 2;
  int32 total = 3;
  repeated User users = 4;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string username = 3;
  string email = 4;
}

message DeleteUserRequest {
  string id = 1;
}

message AssociateUserToOrganizationRequest {
  string user_id = 1;
  string organization_id = 2;
}

message DisassociateUserFromOrganizationRequest {
  string user_id = 1;
  string organization_id = 2;
}

message QueryUsersForOrganizationRequest {
  string organization_id = 1;
  int32 page = 2;
  int32 page_size = 3;
  string order_by = 4;
  string direction = 5;
  string query_string = 6;
}

message QueryUsersForOrganizationResponse {
  int32 page = 1;
  int32 page_size = 2;
  int32 total = 3;
  repeated User users = 4;
}

// Service
service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc QueryUsers (QueryUsersRequest) returns (QueryUsersResponse);
  rpc UpdateUser (UpdateUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty);

  rpc AssociateUserToOrganization (AssociateUserToOrganizationRequest) returns (google.protobuf.Empty);
  rpc DisassociateUserFromOrganization (DisassociateUserFromOrganizationRequest) returns (google.protobuf.Empty);
  rpc QueryUsersForOrganization (QueryUsersForOrganizationRequest) returns (QueryUsersForOrganizationResponse);
}
